--- a/pdf-extraction.ipynb
+++ b/pdf-extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e95ad445",
+   "id": "bf5726d9",
    "metadata": {},
    "source": [
     "### Looking over extraction process for pdfs in order to retrieve all available information"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd2b8f9",
+   "id": "d1754df5",
    "metadata": {},
    "source": [
     "__First we access the extraction-process and look at the data we have already looked at (without overwriting)__"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "c809d991",
+   "id": "ada09568",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74290925",
+   "id": "63075e45",
    "metadata": {},
    "source": [
     "__The methods we have written so far have already done much of the job for us, we can use the already crawled htmls for each relative link and try to extract more of the meta-data available in the table found there:__"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "8c968ee2",
+   "id": "cf269936",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f96439b3",
+   "id": "4f887318",
    "metadata": {},
    "source": [
     "### Expected data available in results:"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7726ed65",
+   "id": "5c88d1d7",
    "metadata": {},
    "source": [
     "![](expectedRena.PNG)"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "77fd63a0",
+   "id": "4493b4e9",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b920f65",
+   "id": "97a43f54",
    "metadata": {},
    "source": [
     "- __From the output it can seem like the data we have available in near the end of the list corresponds to the middle part of the table. We can try splitting the output into more, and smaller lists, matching the expected columns.__\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adbfc528",
+   "id": "dcecc10f",
    "metadata": {},
    "source": [
     "First attempt at splitting and understanding:"
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "090e0c66",
+   "id": "3b4b009c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077d2da1",
+   "id": "fd9d1fac",
    "metadata": {},
    "source": [
     "Looking at what we got from extracting into smaller lists:"
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "d0e63caf",
+   "id": "098f90bc",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "fcdbb7d2",
+   "id": "76e358b7",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2291b470",
+   "id": "1f0f84e9",
    "metadata": {},
    "source": [
     "__Showing this in a \"easier-to-understand\" table:__"
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "d9e74f26",
+   "id": "8adced55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "fa8b6b06",
+   "id": "661207d1",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "74982f9e",
+   "id": "3184b8ac",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "593c0a76",
+   "id": "40ce9281",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8699456b",
+   "id": "c8785b21",
    "metadata": {},
    "source": [
     "### We seem to have gotten something that works here ^"
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff4d0e50",
+   "id": "091707bc",
    "metadata": {},
    "source": [
     "Let's see if we get the same results when looking at more than one destination, and one with possibly more certificates"
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "a53910c7",
+   "id": "02143204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "24b4a42d",
+   "id": "2b7634be",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b3fab36",
+   "id": "55621967",
    "metadata": {},
    "source": [
     "We will now have to to the same preprosessing with the found data of each re.findall(). To make things easier I will try to tweak the already existing minor_lists()"
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "891d661b",
+   "id": "410efe78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "34bed060",
+   "id": "2d2c5aa9",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "bf854f66",
+   "id": "f37f5c5f",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ae230c",
+   "id": "cfbf154c",
    "metadata": {},
    "source": [
     "We now have a DataFrame, but can we actually trust the data? As of now I think we have not captured cases where:\n",
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb06052b",
+   "id": "cd6ea08d",
    "metadata": {},
    "source": [
     "We can check some of the cases by cross-referencing with the actual FIS homepage, the first destination with what seems to be an anomaly is Skaret%2C+Molde.txt. We have a look to see if the found data corresponds:"
@@ -1516,7 +1516,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "198645dd",
+   "id": "6074aa5c",
    "metadata": {},
    "source": [
     "![skaret-molde.png](attachment:skaret-molde.png)"
@@ -1524,11 +1524,172 @@
   },
   {
    "cell_type": "markdown",
-   "id": "179f7cc1",
+   "id": "1eef00d2",
    "metadata": {},
    "source": [
     "We see in the table that it's not the 'south'-anomaly that is our problem with the current dataframe, it's rather the fact that we don't find all the certificates (and their meta-data) for the destination. We can try to fix this by creating separate dataframes for each destination. For making this further step in the process easier to handle, we will work on solving it in a separate notebook (\"dataframe-per-dest.ipynb\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc68e909",
+   "metadata": {},
+   "source": [
+    "_______\n",
+    "Attempt at data extraction with pytesseract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "6363b834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries - attempt with pytesseract - code from GeeksforGeeks \n",
+    "# source: (https://www.geeksforgeeks.org/python-reading-contents-of-pdf-using-ocr-optical-character-recognition/)\n",
+    "from PIL import Image\n",
+    "import pytesseract\n",
+    "import sys\n",
+    "from pdf2image import convert_from_path\n",
+    "import os\n",
+    "\n",
+    "# poppler_path = r”C:\\path\\to\\poppler-xx\\bin” - needed for run-through"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "id": "c49f9424",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PDFInfoNotInstalledError",
+     "evalue": "Unable to get page count. Is poppler installed and in PATH?",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/pdf2image/pdf2image.py\u001b[0m in \u001b[0;36mpdfinfo_from_path\u001b[0;34m(pdf_path, userpw, poppler_path, rawdates, timeout)\u001b[0m\n\u001b[1;32m    457\u001b[0m             \u001b[0menv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"LD_LIBRARY_PATH\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoppler_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\":\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"LD_LIBRARY_PATH\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 458\u001b[0;31m         \u001b[0mproc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPIPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPIPE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    459\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/subprocess.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, args, bufsize, executable, stdin, stdout, stderr, preexec_fn, close_fds, shell, cwd, env, universal_newlines, startupinfo, creationflags, restore_signals, start_new_session, pass_fds, encoding, errors)\u001b[0m\n\u001b[1;32m    728\u001b[0m                                 \u001b[0merrread\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrwrite\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                                 restore_signals, start_new_session)\n\u001b[0m\u001b[1;32m    730\u001b[0m         \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/subprocess.py\u001b[0m in \u001b[0;36m_execute_child\u001b[0;34m(self, args, executable, preexec_fn, close_fds, pass_fds, cwd, env, startupinfo, creationflags, shell, p2cread, p2cwrite, c2pread, c2pwrite, errread, errwrite, restore_signals, start_new_session)\u001b[0m\n\u001b[1;32m   1363\u001b[0m                             \u001b[0merr_msg\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m': '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mrepr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1364\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrno_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1365\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mchild_exception_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr_msg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/usr/local/Cellar/poppler/21.03.0_1/bin/pdfinfo': '/usr/local/Cellar/poppler/21.03.0_1/bin/pdfinfo'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mPDFInfoNotInstalledError\u001b[0m                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-263-7d9a02b3b521>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Store all the pages of the PDF in a variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mpages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvert_from_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPDF_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m500\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpoppler_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/usr/local/Cellar/poppler/21.03.0_1/bin\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Counter to store images of each page of PDF to image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/pdf2image/pdf2image.py\u001b[0m in \u001b[0;36mconvert_from_path\u001b[0;34m(pdf_path, dpi, output_folder, first_page, last_page, fmt, jpegopt, thread_count, userpw, use_cropbox, strict, transparent, single_file, output_file, poppler_path, grayscale, size, paths_only, use_pdftocairo, timeout, hide_annotations)\u001b[0m\n\u001b[1;32m     96\u001b[0m         \u001b[0mpoppler_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoppler_path\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_posix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m     \u001b[0mpage_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpdfinfo_from_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpdf_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muserpw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpoppler_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpoppler_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Pages\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m     \u001b[0;31m# We start by getting the output format, the buffer processing function and if we need pdftocairo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/pdf2image/pdf2image.py\u001b[0m in \u001b[0;36mpdfinfo_from_path\u001b[0;34m(pdf_path, userpw, poppler_path, rawdates, timeout)\u001b[0m\n\u001b[1;32m    483\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    484\u001b[0m         raise PDFInfoNotInstalledError(\n\u001b[0;32m--> 485\u001b[0;31m             \u001b[0;34m\"Unable to get page count. Is poppler installed and in PATH?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    486\u001b[0m         )\n\u001b[1;32m    487\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mPDFInfoNotInstalledError\u001b[0m: Unable to get page count. Is poppler installed and in PATH?"
+     ]
+    }
+   ],
+   "source": [
+    "# Path of the pdf\n",
+    "PDF_file = \"NOR-pdfs/NOR_Al__Liatoppen_21_20-08_8-3.pdf\"\n",
+    "\n",
+    "'''\n",
+    "Part #1 : Converting PDF to images\n",
+    "'''\n",
+    "  \n",
+    "# Store all the pages of the PDF in a variable\n",
+    "pages = convert_from_path(PDF_file, 500, poppler_path = \"/usr/local/Cellar/poppler/21.03.0_1/bin\")\n",
+    "  \n",
+    "# Counter to store images of each page of PDF to image\n",
+    "image_counter = 1\n",
+    "\n",
+    "# Iterate through all the pages stored above\n",
+    "for page in pages:\n",
+    "  \n",
+    "    # Declaring filename for each page of PDF as JPG\n",
+    "    # For each page, filename will be:\n",
+    "    # PDF page 1 -> page_1.jpg\n",
+    "    # PDF page 2 -> page_2.jpg\n",
+    "    # PDF page 3 -> page_3.jpg\n",
+    "    # ....\n",
+    "    # PDF page n -> page_n.jpg\n",
+    "    filename = \"page_\"+str(image_counter)+\".jpg\"\n",
+    "      \n",
+    "    # Save the image of the page in system\n",
+    "    page.save(filename, 'JPEG')\n",
+    "  \n",
+    "    # Increment the counter to update filename\n",
+    "    image_counter = image_counter + 1\n",
+    "  \n",
+    "'''\n",
+    "Part #2 - Recognizing text from the images using OCR\n",
+    "'''\n",
+    "\n",
+    "# Variable to get count of total number of pages\n",
+    "filelimit = image_counter-1\n",
+    "  \n",
+    "# Creating a text file to write the output\n",
+    "outfile = \"out_text.txt\"\n",
+    "  \n",
+    "# Open the file in append mode so that \n",
+    "# All contents of all images are added to the same file\n",
+    "f = open(outfile, \"a\")\n",
+    "\n",
+    "# Iterate from 1 to total number of pages\n",
+    "for i in range(1, filelimit + 1):\n",
+    "  \n",
+    "    # Set filename to recognize text from\n",
+    "    # Again, these files will be:\n",
+    "    # page_1.jpg\n",
+    "    # page_2.jpg\n",
+    "    # ....\n",
+    "    # page_n.jpg\n",
+    "    filename = \"page_\"+str(i)+\".jpg\"\n",
+    "          \n",
+    "    # Recognize the text as string in image using pytesserct\n",
+    "    text = str(((pytesseract.image_to_string(Image.open(filename)))))\n",
+    "  \n",
+    "    # The recognized text is stored in variable text\n",
+    "    # Any string processing may be applied on text\n",
+    "    # Here, basic formatting has been done:\n",
+    "    # In many PDFs, at line ending, if a word can't\n",
+    "    # be written fully, a 'hyphen' is added.\n",
+    "    # The rest of the word is written in the next line\n",
+    "    # Eg: This is a sample text this word here GeeksF-\n",
+    "    # orGeeks is half on first line, remaining on next.\n",
+    "    # To remove this, we replace every '-\\n' to ''.\n",
+    "    text = text.replace('-\\n', '')    \n",
+    "  \n",
+    "    # Finally, write the processed text to the file.\n",
+    "    f.write(text)\n",
+    "  \n",
+    "# Close the file after writing all the text.\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "id": "d8e49971",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'poppler'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-262-a1f0c1a369be>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpoppler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'poppler'"
+     ]
+    }
+   ],
+   "source": [
+    "import poppler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0d00767",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
