--- a/course_comparison.ipynb
+++ b/course_comparison.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "26a9c761",
+   "id": "3bfa2c4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d7d0ebe4",
+   "id": "0d337e2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a4a10ab7",
+   "id": "5145680d",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ebac5bea",
+   "id": "72fc8ede",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee24977",
+   "id": "8eece8a9",
    "metadata": {},
    "source": [
     "Not exactly as wanted, hard to read at some places, we can have a look at what works"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "933f948e",
+   "id": "78173c95",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88d1c0ec",
+   "id": "1d2cccc5",
    "metadata": {},
    "source": [
     "This seems fine and readable, so the problem is with the next lines, this could potentially be fixed by changing the tabula template used to read the files "
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "496efdb7",
+   "id": "6a6c8db4",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa19aec",
+   "id": "750cab62",
    "metadata": {},
    "source": [
     "Trying to see if changing the csv manually solves our problems"
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "71a4ecf8",
+   "id": "96ae9b7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "669a35bd",
+   "id": "ab48026b",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3a2ef361",
+   "id": "0cc6f342",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4b900a07",
+   "id": "e0269eb4",
    "metadata": {},
    "outputs": [
     {
@@ -897,9 +897,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40117acd",
+   "metadata": {},
+   "source": [
+    "---------\n",
+    "Manual comparison w/ google pinpoint gave following results with 69 sample pdfs:\n",
+    "Competition category:\n",
+    "(+x notation shows how many docments had to be read manually to retrieve actual category)\n",
+    "- D (39 + 1)\n",
+    "- E (19 + 1)\n",
+    "- C (7)\n",
+    "- E(D) (2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "904af293",
+   "id": "15d97a15",
    "metadata": {},
    "outputs": [],
    "source": []
